# thunderbot

./: Cargo.toml
thunderbot-cli/: Cargo.toml
thunderbot-cli/src/: main.rs  models.rs
thunderbot-core/: Cargo.toml
thunderbot-core/src/: lib.rs
thunderbot-tools/: Cargo.toml
thunderbot-tools/src/: lib.rs
