[package]
name = "thunderbot-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "thunderbot"
path = "src/main.rs"

[dependencies]
thunderbot-core = { path = "../thunderbot-core" }
thunderbot-tools = { path = "../thunderbot-tools" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.8", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"

